// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders consistently 1`] = `
.c0 {
  display: grid;
  grid-template-columns: auto auto auto 1fr;
  grid-template-areas: 'context-area context-area context-area context-area' 'leading-action title-area trailing-action actions' 'description description description description' 'navigation navigation navigation navigation';
}

.c1 {
  grid-row: 2;
  grid-area: title-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-row: 1;
  grid-area: context-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 0.5rem;
  gap: 0.5rem;
}

.c3 {
  grid-row: 3;
  grid-area: description;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 0.5rem;
  gap: 0.5rem;
}

.c4 {
  grid-row: 4;
  grid-area: navigation;
  padding-top: 0.5rem;
  display: block;
}

@media screen and (max-width:calc(768px - 0.02px)) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    data-component="TitleArea"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
</div>
`;

exports[`PageHeader renders default layout 1`] = `
.c0 {
  display: grid;
  grid-template-columns: auto auto auto 1fr;
  grid-template-areas: 'context-area context-area context-area context-area' 'leading-action title-area trailing-action actions' 'description description description description' 'navigation navigation navigation navigation';
}

.c1 {
  grid-row: 2;
  grid-area: title-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  grid-row: 1;
  grid-area: context-area;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 0.5rem;
  gap: 0.5rem;
}

.c3 {
  grid-row: 3;
  grid-area: description;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 0.5rem;
  gap: 0.5rem;
}

.c4 {
  grid-row: 4;
  grid-area: navigation;
  padding-top: 0.5rem;
  display: block;
}

@media screen and (max-width:calc(768px - 0.02px)) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-component="TitleArea"
    >
      TitleArea
    </div>
    <div
      class="c2"
    >
      ContextArea
    </div>
    <div
      class="c3"
    >
      Description
    </div>
    <div
      class="c4"
    >
      Navigation
    </div>
  </div>
</div>
`;
